testsuite/bsc.typechecker/kind/TypeAliasResGivenNonNumIsNumParam.bs
package TypeAliasResGivenNonNumIsNumParam () where

type (Foo :: # -> *) a = a

